[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/image/ItemExtraBomb.png" type="Texture" id=3]
[ext_resource path="res://assets/image/ItemSpeedIncrease.png" type="Texture" id=4]
[ext_resource path="res://assets/image/ItemBlastRadius.png" type="Texture" id=5]
[ext_resource path="res://assets/image/Ground.png" type="Texture" id=6]
[ext_resource path="res://assets/image/backgroundDesert.png" type="Texture" id=7]
[ext_resource path="res://scripts/AIGame.gd" type="Script" id=8]
[ext_resource path="res://scenes/AIPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/MainPlayer.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="AIGame" type="Node2D"]
script = ExtResource( 8 )

[node name="BackgroundDesert" type="Sprite" parent="."]
position = Vector2( 512, 320 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 310.5, 152 )
scale = Vector2( 0.995238, 1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 630, 304 )

[node name="Items" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Players" type="YSort" parent="YSort"]

[node name="AIPlayer" parent="YSort/Players" instance=ExtResource( 9 )]
position = Vector2( 608, 0 )

[node name="MainPlayer" parent="YSort/Players" instance=ExtResource( 10 )]

[node name="AIPlayer2" parent="YSort/Players" instance=ExtResource( 9 )]
position = Vector2( 0, 288 )

[node name="AIPlayer3" parent="YSort/Players" instance=ExtResource( 9 )]
position = Vector2( 608, 288 )

[node name="Bombs" type="YSort" parent="YSort"]

[node name="Dialog" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 200.0
margin_top = 96.0
margin_right = 440.0
margin_bottom = 224.0

[node name="OutGame" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.741176 )
margin_top = 304.0
margin_right = 624.0
margin_bottom = 354.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_right = 624.0
margin_bottom = 50.0
custom_fonts/mono_font = SubResource( 1 )

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_top = 48.0
margin_right = 624.0
margin_bottom = 80.0
placeholder_text = "Message"

[node name="Label" type="Label" parent="Panel"]
margin_left = 520.0
margin_top = 45.0
margin_right = 624.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Time"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 376, 64 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Panel"]
position = Vector2( 432, 64 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Panel"]
position = Vector2( 488, 64 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="fire" type="Label" parent="Panel"]
margin_left = 384.0
margin_top = 48.0
margin_right = 416.0
margin_bottom = 79.0
text = "x0"
align = 1
valign = 1

[node name="bomb" type="Label" parent="Panel"]
margin_left = 448.0
margin_top = 56.0
margin_right = 472.0
margin_bottom = 70.0
text = "x0"

[node name="shoes" type="Label" parent="Panel"]
margin_left = 504.0
margin_top = 56.0
margin_right = 544.0
margin_bottom = 70.0
text = "x0"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="Timer4" type="Timer" parent="."]

[connection signal="timeout" from="OutGame" to="." method="_on_OutGame_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
